--- a/notebooks/03_Transcendental_Analysis_Heatmaps.ipynb
+++ b/notebooks/03_Transcendental_Analysis_Heatmaps.ipynb
@@ -50,8 +50,6 @@
     "# Create Metacell (SEACell) Heatmaps\n",
     "fig, axes = plt.subplots(1, 2, figsize=(18, 7))\n",
     "\n",
-    "# This new, clean plotting function would be in src/plotting.py\n",
-    "# It would contain all the logic from your 'create_transcendental_heatmap'\n",
     "plot_transcendental_heatmap(\n",
     "    adata_seacell, '3', '4', ax=axes[0], title='Transition A3 → A4 (Metacells)'\n",
     ")\n",
@@ -89,7 +87,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py38",
    "language": "python",
    "name": "python3"
   },
