--- a/notebooks/04_Comprehensive_Figure_Assembly.ipynb
+++ b/notebooks/04_Comprehensive_Figure_Assembly.ipynb
@@ -194,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py38",
    "language": "python",
    "name": "python3"
   },
